fix broken links

--- a/research.html
+++ b/research.html
@@ -154,10 +154,10 @@
             <a href="research/e-m183-recent-origin-2018.html" class="discovery-card" style="text-decoration: none; display: block; border-top: 3px solid #8B4513; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;">
                 <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem;">
                     <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.12); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Y-Chromosome</span>
-                    <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace;">Oct 2018</span>
+                    <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace;">Nov 2017</span>
                 </div>
                 <h3 style="font-size: 1.1rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.4; font-family: 'Space Grotesk', sans-serif;">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h3>
-                <p style="font-size: 0.85rem; color: #666; line-height: 1.6; margin-bottom: 1rem;">D'Atanasio et al. use whole Y-chromosome sequencing to date E-M81 TMRCA to ~2,000-3,000 years ago, revealing a star-like demographic expansion.</p>
+                <p style="font-size: 0.85rem; color: #666; line-height: 1.6; margin-bottom: 1rem;">Solé-Morata et al. use whole Y-chromosome sequencing to date E-M81 TMRCA to ~2,000-3,000 years ago, revealing a star-like demographic expansion.</p>
                 <div style="display: flex; align-items: center; gap: 0.5rem;">
                     <span style="font-size: 0.8rem; color: #8B4513; font-weight: 600;">Read Summary</span>
                     <span style="color: #8B4513;">&rarr;</span>
