--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>E-M183 Recent Origin | D'Atanasio 2018</title>
-    <meta name="description" content="Summary of D'Atanasio et al. 2018: whole Y-chromosome sequencing dates E-M81/E-M183 TMRCA to ~2,000-3,000 years ago with star-like expansion pattern.">
-    <meta name="keywords" content="E-M183 haplogroup, E-M81 origin, Y-chromosome sequencing, D'Atanasio 2018, Berber Y-DNA, E-PF2546, North African paternal lineage, Scientific Reports">
+    <title>E-M183 Recent Origin | Solé-Morata 2017</title>
+    <meta name="description" content="Summary of Solé-Morata et al. 2017: whole Y-chromosome sequencing dates E-M81/E-M183 TMRCA to ~2,000-3,000 years ago with star-like expansion pattern.">
+    <meta name="keywords" content="E-M183 haplogroup, E-M81 origin, Y-chromosome sequencing, Solé-Morata 2017, Berber Y-DNA, E-PF2546, North African paternal lineage, Scientific Reports">
     <meta name="author" content="Amazigh Lineage Heritage Project">
     <meta name="robots" content="index, follow, max-image-preview:large">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="Amazigh Lineage Heritage">
-    <meta property="og:title" content="E-M183 Recent Origin — D'Atanasio et al. 2018">
+    <meta property="og:title" content="E-M183 Recent Origin — Solé-Morata et al. 2017">
     <meta property="og:description" content="Whole Y-chromosome sequencing reveals E-M81 expanded only ~2,000-3,000 years ago.">
     <meta property="og:url" content="https://aitmhend-dna.github.io/research/e-m183-recent-origin-2018.html">
     <meta property="og:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="E-M183 Recent Origin — D'Atanasio et al. 2018">
+    <meta name="twitter:title" content="E-M183 Recent Origin — Solé-Morata et al. 2017">
     <meta name="twitter:description" content="Whole Y-chromosome sequencing reveals E-M81 expanded only ~2,000-3,000 years ago.">
     <meta name="twitter:image" content="https://aitmhend-dna.github.io/img/E-PF2546-map.png">
 
@@ -45,7 +45,7 @@
       "@context": "https://schema.org",
       "@type": "ScholarlyArticle",
       "headline": "Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183",
-      "description": "Summary of D'Atanasio et al. 2018 — whole Y-chromosome sequencing dating E-M81 TMRCA to ~2,000-3,000 years ago",
+      "description": "Summary of Solé-Morata et al. 2017 — whole Y-chromosome sequencing dating E-M81 TMRCA to ~2,000-3,000 years ago",
       "author": {
         "@type": "Organization",
         "name": "Amazigh Lineage Heritage Project"
@@ -115,11 +115,11 @@
             <div style="display: flex; align-items: flex-start; gap: 1rem; margin-bottom: 1rem; flex-wrap: wrap;">
                 <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.12); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Y-Chromosome</span>
                 <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.1); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Scientific Reports</span>
-                <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace; margin-left: auto;">October 2018</span>
+                <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace; margin-left: auto;">November 2017</span>
             </div>
             <h2 style="font-size: 1.75rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.3;">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h2>
-            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">D'Atanasio, E. et al. (2018). <em>Scientific Reports</em>, 8, 15941.</p>
-            <a href="https://doi.org/10.1038/s41598-018-34293-4" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #8B4513; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #8B4513; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
+            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Solé-Morata, N. et al. (2017). <em>Scientific Reports</em>, 7, 15941.</p>
+            <a href="https://doi.org/10.1038/s41598-017-16271-y" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #8B4513; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #8B4513; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
         </section>
 
         <!-- Summary -->
