--- a/research/green-sahara-ancient-dna-2025.html
+++ b/research/green-sahara-ancient-dna-2025.html
@@ -119,7 +119,7 @@
             </div>
             <h2 style="font-size: 1.75rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.3;">Ancient DNA from the Green Sahara Reveals Ancestral North African Lineage</h2>
             <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Salem, T. et al. (2025). <em>Nature</em>, 641, 144&ndash;150.</p>
-            <a href="https://doi.org/10.1038/s41586-024-08360-y" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CD7F32; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #CD7F32; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
+            <a href="https://doi.org/10.1038/s41586-025-08793-7" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CD7F32; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #CD7F32; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
         </section>
 
         <!-- Summary -->
