--- a/research/north-african-mitogenomes-2025.html
+++ b/research/north-african-mitogenomes-2025.html
@@ -118,8 +118,8 @@
                 <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace; margin-left: auto;">January 2025</span>
             </div>
             <h2 style="font-size: 1.75rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.3;">The Origin of Modern North Africans as Depicted by a Massive Survey of Mitogenomes</h2>
-            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Colombo, G. et al. (2025). <em>Scientific Reports</em>, 15, 27025.</p>
-            <a href="https://doi.org/10.1038/s41598-025-11357-2" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CC8E35; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #CC8E35; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
+            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Colombo, G. et al. (2025). <em>Scientific Reports</em>.</p>
+            <a href="https://doi.org/10.1038/s41598-025-12209-x" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CC8E35; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #CC8E35; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
         </section>
 
         <!-- Summary -->
