--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,7 @@
             <p>Connect with a Fellow Heritage Enthusiast</p>
         </div>
     </header>
-
-    <nav>
+    <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html">Home</a>
             <a href="lineage.html">Lineage History</a>
@@ -211,7 +210,7 @@
                     <label class="checkbox-label">
                         <input type="checkbox" id="newsletter" name="newsletter" value="yes">
                         <span class="checkmark"></span>
-                        I'd like to receive updates about new discoveries and heritage findings
+                        You may contact me about follow-up updates related to this message (no mailing list)
                     </label>
                 </div>
 
@@ -226,7 +225,7 @@
 
                 <div class="form-note">
                     <p><strong>Note:</strong> This form sends messages directly to my inbox. If you prefer, you can also email me directly at <a href="mailto:ait.mhend.dna@gmail.com">ait.mhend.dna@gmail.com</a></p>
-                    <p><small>I typically respond to messages within a few days. I love hearing from fellow heritage enthusiasts, so don't hesitate to reach out!</small></p>
+                    <p><small>I typically respond within a few days. The optional checkbox above only allows follow-up on this conversation and does not subscribe you to a newsletter.</small></p>
                 </div>
                 
                 <!-- Fallback for form issues -->
@@ -266,7 +265,7 @@
         <section class="card privacy-notice">
             <h2>🔒 Privacy & Respect</h2>
             <p>
-                I respect your privacy and treat all communications confidentially. Your contact information is used only to respond to your messages and won't be shared with anyone else. If you choose to receive updates, you can always let me know if you'd prefer to stop receiving them.
+                I respect your privacy and treat all communications confidentially. Your contact information is used only to respond to your messages and won't be shared with anyone else. If you opt in for follow-up updates, that applies only to your current conversation.
             </p>
             <p>
                 <strong>Personal Approach:</strong> As an individual researcher, I handle all correspondence personally and respectfully. 
@@ -381,3 +380,4 @@
     </script>
 </body>
 </html>
+
