--- a/culture.html
+++ b/culture.html
@@ -94,8 +94,7 @@
             <p>From Ancient Amazigh Confederations to Modern Traditions</p>
         </div>
     </header>
-
-    <nav>
+    <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html">Home</a>
             <a href="lineage.html">Lineage History</a>
@@ -1018,3 +1017,4 @@
     </script>
 </body>
 </html>
+
