--- a/genetics.html
+++ b/genetics.html
@@ -94,8 +94,7 @@
             <p>How Genetics Rewrites Human History & Traces Ancient Migrations</p>
         </div>
     </header>
-
-    <nav>
+    <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html">Home</a>
             <a href="lineage.html">Lineage History</a>
@@ -703,3 +702,4 @@
     </script>
 </body>
 </html>
+
