--- a/lineage.html
+++ b/lineage.html
@@ -142,8 +142,7 @@
             <p>A Multi-Disciplinary Analysis of an Amazigh Lineage from the Souss-Massa</p>
         </div>
     </header>
-
-    <nav>
+    <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html">Home</a>
             <a href="lineage.html" class="active">Lineage History</a>
@@ -686,3 +685,4 @@ flowchart LR
     </script>
 </body>
 </html>
+
