--- a/research.html
+++ b/research.html
@@ -68,8 +68,7 @@
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
-
-    <nav>
+    <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html">Home</a>
             <a href="lineage.html">Lineage History</a>
@@ -179,3 +178,5 @@
 
 </body>
 </html>
+
+
