--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -78,8 +78,7 @@
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
-
-    <nav>
+    <nav class="main-nav">
         <div class="nav-container">
             <a href="../index.html">Home</a>
             <a href="../lineage.html">Lineage History</a>
@@ -167,3 +166,5 @@
 
 </body>
 </html>
+
+
