--- a/index.html
+++ b/index.html
@@ -105,12 +105,7 @@
         }
       },
       "keywords": ["Amazigh genetics", "Berber DNA", "North African ancestry", "Souss-Massa heritage", "Chtouka tribe"],
-      "inLanguage": "en",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://aitmhend-dna.github.io/?q={search_term_string}",
-        "query-input": "required name=search_term_string"
-      }
+      "inLanguage": "en"
     }
     </script>
     
@@ -174,8 +169,7 @@
             <p>A Journey Through Time: Tracing Genetic, Historical, and Cultural Roots in the Souss-Massa</p>
         </div>
     </header>
-
-    <nav>
+    <nav class="main-nav">
         <div class="nav-container">
             <a href="index.html" class="active">Home</a>
             <a href="lineage.html">Lineage History</a>
@@ -205,7 +199,7 @@
                         <span style="font-size: 0.75rem; color: #CC8E35; text-transform: uppercase; letter-spacing: 0.1em; font-weight: 600;">Genetic Research</span>
                         <div style="flex: 1; height: 2px; background: linear-gradient(90deg, #CC8E35, transparent);"></div>
                     </div>
-                    <h1 itemprop="headline" style="font-size: 2.25rem; line-height: 1.2; margin-bottom: 1.5rem; color: #3E2723;">Tracing an Ancient Amazigh Lineage through <span style="background: linear-gradient(135deg, #CD7F32 0%, #CC8E35 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Genetic Analysis</span></h1>
+                    <h2 itemprop="headline" style="font-size: 2.25rem; line-height: 1.2; margin-bottom: 1.5rem; color: #3E2723;">Tracing an Ancient Amazigh Lineage through <span style="background: linear-gradient(135deg, #CD7F32 0%, #CC8E35 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Genetic Analysis</span></h2>
                     <p class="text-large" style="margin-bottom: 2rem; color: #475569; line-height: 1.7;">A comprehensive multi-disciplinary study examining the convergence of indigenous North African (E-PF2546) and European (H1-T16189C!) lineages within the Chtouka confederation of the Souss-Massa region.</p>
                     <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                         <a href="lineage.html" class="btn" style="background: #CD7F32;">📊 View Complete Analysis</a>
@@ -469,3 +463,5 @@
 
 </body>
 </html>
+
+
