add editorial metadata and updates subscription sections to research pages

--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@
         </section>
 
         <!-- Research Updates Signup -->
-        <section class="card">
+        <section id="updates-signup" class="card">
             <h2 style="border-left: 4px solid #CD7F32; padding-left: 1rem;">Research Updates</h2>
             <p class="text-large">If you want occasional updates when new research summaries are published, subscribe here. This is separate from the contact form.</p>
 
