--- a/research.html
+++ b/research.html
@@ -94,6 +94,12 @@
     </nav>
 
     <main id="main-content" class="container" role="main">
+        <div class="editorial-meta" aria-label="Editorial metadata">
+            <span class="meta-pill">Last updated: February 13, 2026</span>
+            <span class="meta-pill">4 article summaries</span>
+            <span class="meta-pill">Focus: North African population genetics</span>
+        </div>
+
         <!-- Page Introduction -->
         <section class="card" style="margin-bottom: 3rem; border-top: 3px solid transparent; border-image: linear-gradient(90deg, #CD7F32 0%, #CC8E35 50%, #D2691E 100%) 1;">
             <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem;">
@@ -169,6 +175,12 @@
         <section class="card" style="border-left: 3px solid #CD7F32; background: linear-gradient(to right, rgba(205, 127, 50, 0.04), transparent);">
             <h3 style="color: #3E2723; margin-bottom: 0.75rem;">About These Summaries</h3>
             <p style="color: #475569; line-height: 1.7; font-size: 0.95rem;">Each summary highlights findings relevant to the Amazigh (Berber) lineages discussed on this site, specifically the E-PF2546 Y-DNA and H1-T16189C! mtDNA haplogroups from the Souss-Massa region. For complete methodology and data, please refer to the original publications linked on each page.</p>
+        </section>
+
+        <section class="card updates-cta">
+            <h3>Get Research Updates</h3>
+            <p>Want occasional notifications when new research summaries are published? Use the dedicated updates signup on the contact page.</p>
+            <a href="contact.html#updates-signup" class="btn">Subscribe to Updates</a>
         </section>
     </main>
 
