--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -108,6 +108,11 @@
     </nav>
 
     <main id="main-content" class="container" role="main">
+        <div class="editorial-meta" aria-label="Article metadata">
+            <span class="meta-pill">Summary updated: February 13, 2026</span>
+            <span class="meta-pill">Estimated read: 4 min</span>
+            <span class="meta-pill">Primary source: Scientific Reports (2017)</span>
+        </div>
 
         <!-- Paper Info Card -->
         <section class="card" style="margin-bottom: 2rem; border-top: 3px solid #8B4513;">
@@ -147,6 +152,26 @@
             <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This study is foundational to the paternal lineage analysis presented throughout this site. E-PF2546, the specific Y-DNA haplogroup carried by the Chtouka lineage, is a subclade within the E-M81/E-M183 branch. The dating of E-M81's expansion to ~2,000&ndash;3,000 years ago (~300 BCE to 1000 BCE) directly informs the timeline discussed on our <a href="../lineage.html" style="color: #8B4513;">Lineage History</a> page.</p>
             <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The star-like expansion pattern aligns with the historical narrative of Amazigh confederation formation in the Souss-Massa region. The rapid population growth from a small founding group is consistent with the establishment and expansion of tribal confederations like the Chtouka, where patrilineal descent structures would amplify specific Y-DNA lineages.</p>
             <p style="color: #475569; line-height: 1.8;">The ~300 BCE date for E-PF2546 referenced on this site is derived from the branching structure established by this paper, placing the Chtouka lineage's diversification within the broader E-M81 expansion during a period of significant political and economic change across the Maghreb.</p>
+        </section>
+
+        <section class="card">
+            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Related Reading</h3>
+            <div class="related-grid">
+                <a href="green-sahara-ancient-dna-2025.html" class="related-link-card">
+                    <h4>Green Sahara Ancient DNA (2025)</h4>
+                    <p>Deep-time context from ancient Saharan genomes and North African population structure.</p>
+                </a>
+                <a href="neolithic-iberia-morocco-2023.html" class="related-link-card">
+                    <h4>Neolithic Iberia-Morocco (2023)</h4>
+                    <p>Ancient migration pathways relevant to maternal lineages in Northwest Africa.</p>
+                </a>
+            </div>
+        </section>
+
+        <section class="card updates-cta">
+            <h3>Follow Future Summaries</h3>
+            <p>For occasional updates on newly published research pages, subscribe on the contact page.</p>
+            <a href="../contact.html#updates-signup" class="btn">Subscribe to Updates</a>
         </section>
 
         <!-- Navigation -->
