--- a/research/green-sahara-ancient-dna-2025.html
+++ b/research/green-sahara-ancient-dna-2025.html
@@ -108,6 +108,11 @@
     </nav>
 
     <main id="main-content" class="container" role="main">
+        <div class="editorial-meta" aria-label="Article metadata">
+            <span class="meta-pill">Summary updated: February 13, 2026</span>
+            <span class="meta-pill">Estimated read: 4 min</span>
+            <span class="meta-pill">Primary source: Nature (2025)</span>
+        </div>
 
         <!-- Paper Info Card -->
         <section class="card" style="margin-bottom: 2rem; border-top: 3px solid #CD7F32;">
@@ -147,6 +152,26 @@
             <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">While this study focuses on populations from a different time and place than the Chtouka lineage, it provides critical context for understanding the deep ancestry of all North African groups, including the Amazigh (Berber) populations of the Souss-Massa.</p>
             <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The discovery of a basal haplogroup N lineage in the Sahara demonstrates that North Africa's genetic landscape was shaped by multiple distinct population layers over millennia. This complexity supports the dual-origin model discussed on our <a href="../lineage.html" style="color: #CD7F32;">Lineage History</a> page, where indigenous North African paternal lineages (E-PF2546) coexist with maternal lineages (H1-T16189C!) that arrived via different migration routes.</p>
             <p style="color: #475569; line-height: 1.8;">The Green Sahara period represents one of several major demographic events that shaped the genetic diversity observed in modern Amazigh populations, preceding the later expansions that gave rise to the E-M81/E-PF2546 lineage.</p>
+        </section>
+
+        <section class="card">
+            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Related Reading</h3>
+            <div class="related-grid">
+                <a href="north-african-mitogenomes-2025.html" class="related-link-card">
+                    <h4>North African Mitogenomes (2025)</h4>
+                    <p>Large-scale mtDNA survey that refines maternal lineage structure across North Africa.</p>
+                </a>
+                <a href="neolithic-iberia-morocco-2023.html" class="related-link-card">
+                    <h4>Neolithic Iberia-Morocco (2023)</h4>
+                    <p>Ancient DNA evidence for migration routes linking Iberia and Neolithic Morocco.</p>
+                </a>
+            </div>
+        </section>
+
+        <section class="card updates-cta">
+            <h3>Follow Future Summaries</h3>
+            <p>For occasional updates on newly published research pages, subscribe on the contact page.</p>
+            <a href="../contact.html#updates-signup" class="btn">Subscribe to Updates</a>
         </section>
 
         <!-- Navigation -->
