Add new map image and update research pages with improved styling and structure
- Added a new map image (map-maghreb.png) to the img directory.
- Refactored research.html to enhance the layout and styling of research sections, including:
  - Updated section classes for better CSS management.
  - Improved card layouts for research papers with consistent styling.
  - Enhanced readability and accessibility of text elements.
- Updated e-m183-recent-origin-2018.html and green-sahara-ancient-dna-2025.html to align with new styling conventions, including:
  - Refined paper info cards and summaries for clarity.
  - Adjusted navigation elements for consistency across research articles.

--- a/research.html
+++ b/research.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -101,80 +101,80 @@
         </div>
 
         <!-- Page Introduction -->
-        <section class="card" style="margin-bottom: 3rem; border-top: 3px solid transparent; border-image: linear-gradient(90deg, #CD7F32 0%, #CC8E35 50%, #D2691E 100%) 1;">
-            <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem;">
-                <span style="font-size: 0.75rem; color: #CC8E35; text-transform: uppercase; letter-spacing: 0.1em; font-weight: 600;">Research Papers</span>
-                <div style="flex: 1; height: 2px; background: linear-gradient(90deg, #CC8E35, transparent);"></div>
+        <section class="card research-intro-card">
+            <div class="section-kicker-row">
+                <span class="section-kicker">Research Papers</span>
+                <div class="section-kicker-line"></div>
             </div>
-            <h2 style="font-size: 2rem; line-height: 1.2; margin-bottom: 1rem; color: #3E2723;">Recent Studies in <span style="background: linear-gradient(135deg, #CD7F32 0%, #CC8E35 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">North African Genetics</span></h2>
-            <p style="color: #475569; line-height: 1.7; max-width: 800px;">Summaries of key peer-reviewed publications that advance our understanding of Amazigh (Berber) genetic heritage, ancient DNA from the Maghreb, and population dynamics across North Africa.</p>
+            <h2 class="research-intro-title">Recent Studies in <span class="research-intro-gradient">North African Genetics</span></h2>
+            <p class="research-intro-copy">Summaries of key peer-reviewed publications that advance our understanding of Amazigh (Berber) genetic heritage, ancient DNA from the Maghreb, and population dynamics across North Africa.</p>
         </section>
 
         <!-- Research Cards Grid -->
-        <div class="discovery-grid" style="margin-bottom: 3rem;">
+        <div class="discovery-grid discovery-grid-spaced">
 
             <!-- Card 1: Salem et al. 2025 -->
-            <a href="research/green-sahara-ancient-dna-2025.html" class="discovery-card" style="text-decoration: none; display: block; border-top: 3px solid #CD7F32; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;">
-                <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem;">
-                    <span style="font-size: 0.7rem; background: rgba(205, 127, 50, 0.12); color: #CD7F32; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Ancient DNA</span>
-                    <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace;">Jan 2025</span>
+            <a href="research/green-sahara-ancient-dna-2025.html" class="discovery-card discovery-card-plain discovery-card-copper">
+                <div class="discovery-card-head">
+                    <span class="discovery-tag discovery-tag-copper">Ancient DNA</span>
+                    <span class="discovery-date">Jan 2025</span>
                 </div>
-                <h3 style="font-size: 1.1rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.4; font-family: 'Space Grotesk', sans-serif;">Ancient DNA from the Green Sahara Reveals Ancestral North African Lineage</h3>
-                <p style="font-size: 0.85rem; color: #666; line-height: 1.6; margin-bottom: 1rem;">Salem et al. recover ~7,000-year-old DNA from Libya, revealing a basal haplogroup N lineage and complex population dynamics during the Green Sahara period.</p>
-                <div style="display: flex; align-items: center; gap: 0.5rem;">
-                    <span style="font-size: 0.8rem; color: #CD7F32; font-weight: 600;">Read Summary</span>
-                    <span style="color: #CD7F32;">&rarr;</span>
+                <h3 class="discovery-title">Ancient DNA from the Green Sahara Reveals Ancestral North African Lineage</h3>
+                <p class="discovery-summary">Salem et al. recover ~7,000-year-old DNA from Libya, revealing a basal haplogroup N lineage and complex population dynamics during the Green Sahara period.</p>
+                <div class="discovery-cta">
+                    <span class="discovery-cta-label text-copper">Read Summary</span>
+                    <span class="text-copper">&rarr;</span>
                 </div>
             </a>
 
             <!-- Card 2: Colombo et al. 2025 -->
-            <a href="research/north-african-mitogenomes-2025.html" class="discovery-card" style="text-decoration: none; display: block; border-top: 3px solid #CC8E35; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;">
-                <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem;">
-                    <span style="font-size: 0.7rem; background: rgba(204, 142, 53, 0.12); color: #CC8E35; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Mitochondrial DNA</span>
-                    <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace;">Jan 2025</span>
+            <a href="research/north-african-mitogenomes-2025.html" class="discovery-card discovery-card-plain discovery-card-ochre">
+                <div class="discovery-card-head">
+                    <span class="discovery-tag discovery-tag-ochre">Mitochondrial DNA</span>
+                    <span class="discovery-date">Jan 2025</span>
                 </div>
-                <h3 style="font-size: 1.1rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.4; font-family: 'Space Grotesk', sans-serif;">The Origin of Modern North Africans as Depicted by a Massive Survey of Mitogenomes</h3>
-                <p style="font-size: 0.85rem; color: #666; line-height: 1.6; margin-bottom: 1rem;">Colombo et al. analyze 733 modern and 43 ancient mitogenomes, confirming H1 subclade distributions and female-mediated dispersals across North Africa.</p>
-                <div style="display: flex; align-items: center; gap: 0.5rem;">
-                    <span style="font-size: 0.8rem; color: #CC8E35; font-weight: 600;">Read Summary</span>
-                    <span style="color: #CC8E35;">&rarr;</span>
+                <h3 class="discovery-title">The Origin of Modern North Africans as Depicted by a Massive Survey of Mitogenomes</h3>
+                <p class="discovery-summary">Colombo et al. analyze 733 modern and 43 ancient mitogenomes, confirming H1 subclade distributions and female-mediated dispersals across North Africa.</p>
+                <div class="discovery-cta">
+                    <span class="discovery-cta-label text-ochre">Read Summary</span>
+                    <span class="text-ochre">&rarr;</span>
                 </div>
             </a>
 
             <!-- Card 3: Villalba-Mouco et al. 2023 -->
-            <a href="research/neolithic-iberia-morocco-2023.html" class="discovery-card" style="text-decoration: none; display: block; border-top: 3px solid #D2691E; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;">
-                <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem;">
-                    <span style="font-size: 0.7rem; background: rgba(210, 105, 30, 0.12); color: #D2691E; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Ancient DNA</span>
-                    <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace;">Jun 2023</span>
+            <a href="research/neolithic-iberia-morocco-2023.html" class="discovery-card discovery-card-plain discovery-card-clay">
+                <div class="discovery-card-head">
+                    <span class="discovery-tag discovery-tag-clay">Ancient DNA</span>
+                    <span class="discovery-date">Jun 2023</span>
                 </div>
-                <h3 style="font-size: 1.1rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.4; font-family: 'Space Grotesk', sans-serif;">Northwest African Neolithic Initiated by Migrants from Iberia and Levant</h3>
-                <p style="font-size: 0.85rem; color: #666; line-height: 1.6; margin-bottom: 1rem;">Villalba-Mouco et al. present ancient DNA from Neolithic Morocco revealing European Neolithic ancestry and confirming trans-Gibraltar migration routes.</p>
-                <div style="display: flex; align-items: center; gap: 0.5rem;">
-                    <span style="font-size: 0.8rem; color: #D2691E; font-weight: 600;">Read Summary</span>
-                    <span style="color: #D2691E;">&rarr;</span>
+                <h3 class="discovery-title">Northwest African Neolithic Initiated by Migrants from Iberia and Levant</h3>
+                <p class="discovery-summary">Villalba-Mouco et al. present ancient DNA from Neolithic Morocco revealing European Neolithic ancestry and confirming trans-Gibraltar migration routes.</p>
+                <div class="discovery-cta">
+                    <span class="discovery-cta-label text-clay">Read Summary</span>
+                    <span class="text-clay">&rarr;</span>
                 </div>
             </a>
 
             <!-- Card 4: D'Atanasio et al. 2018 -->
-            <a href="research/e-m183-recent-origin-2018.html" class="discovery-card" style="text-decoration: none; display: block; border-top: 3px solid #8B4513; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;">
-                <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1rem;">
-                    <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.12); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Y-Chromosome</span>
-                    <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace;">Nov 2017</span>
+            <a href="research/e-m183-recent-origin-2018.html" class="discovery-card discovery-card-plain discovery-card-sienna">
+                <div class="discovery-card-head">
+                    <span class="discovery-tag discovery-tag-sienna">Y-Chromosome</span>
+                    <span class="discovery-date">Nov 2017</span>
                 </div>
-                <h3 style="font-size: 1.1rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.4; font-family: 'Space Grotesk', sans-serif;">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h3>
-                <p style="font-size: 0.85rem; color: #666; line-height: 1.6; margin-bottom: 1rem;">Solé-Morata et al. use whole Y-chromosome sequencing to date E-M81 TMRCA to ~2,000-3,000 years ago, revealing a star-like demographic expansion.</p>
-                <div style="display: flex; align-items: center; gap: 0.5rem;">
-                    <span style="font-size: 0.8rem; color: #8B4513; font-weight: 600;">Read Summary</span>
-                    <span style="color: #8B4513;">&rarr;</span>
+                <h3 class="discovery-title">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h3>
+                <p class="discovery-summary">Solé-Morata et al. use whole Y-chromosome sequencing to date E-M81 TMRCA to ~2,000-3,000 years ago, revealing a star-like demographic expansion.</p>
+                <div class="discovery-cta">
+                    <span class="discovery-cta-label text-sienna">Read Summary</span>
+                    <span class="text-sienna">&rarr;</span>
                 </div>
             </a>
 
         </div>
 
         <!-- Context Note -->
-        <section class="card" style="border-left: 3px solid #CD7F32; background: linear-gradient(to right, rgba(205, 127, 50, 0.04), transparent);">
-            <h3 style="color: #3E2723; margin-bottom: 0.75rem;">About These Summaries</h3>
-            <p style="color: #475569; line-height: 1.7; font-size: 0.95rem;">Each summary highlights findings relevant to the Amazigh (Berber) lineages discussed on this site, specifically the E-PF2546 Y-DNA and H1-T16189C! mtDNA haplogroups from the Souss-Massa region. For complete methodology and data, please refer to the original publications linked on each page.</p>
+        <section class="card research-context-card">
+            <h3 class="research-context-title">About These Summaries</h3>
+            <p class="research-context-copy">Each summary highlights findings relevant to the Amazigh (Berber) lineages discussed on this site, specifically the E-PF2546 Y-DNA and H1-T16189C! mtDNA haplogroups from the Souss-Massa region. For complete methodology and data, please refer to the original publications linked on each page.</p>
         </section>
 
         <section class="card updates-cta">
@@ -190,5 +190,7 @@
 
 </body>
 </html>
+
+
 
 
