--- a/research/e-m183-recent-origin-2018.html
+++ b/research/e-m183-recent-origin-2018.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -115,47 +115,47 @@
         </div>
 
         <!-- Paper Info Card -->
-        <section class="card" style="margin-bottom: 2rem; border-top: 3px solid #8B4513;">
-            <div style="display: flex; align-items: flex-start; gap: 1rem; margin-bottom: 1rem; flex-wrap: wrap;">
-                <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.12); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Y-Chromosome</span>
-                <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.1); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Scientific Reports</span>
-                <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace; margin-left: auto;">November 2017</span>
+        <section class="card article-section paper-card-sienna">
+            <div class="paper-meta-row">
+                <span class="paper-badge paper-badge-sienna">Y-Chromosome</span>
+                <span class="paper-badge paper-badge-journal">Scientific Reports</span>
+                <span class="paper-date">November 2017</span>
             </div>
-            <h2 style="font-size: 1.75rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.3;">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h2>
-            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Solé-Morata, N. et al. (2017). <em>Scientific Reports</em>, 7, 15941.</p>
-            <a href="https://doi.org/10.1038/s41598-017-16271-y" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #8B4513; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #8B4513; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
+            <h2 class="paper-title">Whole Y-Chromosome Sequences Reveal an Extremely Recent Origin of E-M183</h2>
+            <p class="paper-citation">Solé-Morata, N. et al. (2017). <em>Scientific Reports</em>, 7, 15941.</p>
+            <a href="https://doi.org/10.1038/s41598-017-16271-y" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-sienna">View Full Paper (DOI) &rarr;</a>
         </section>
 
         <!-- Summary -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Summary</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This study used whole Y-chromosome sequencing to reconstruct the phylogeny and dating of haplogroup E-M81 (also known as E-M183), the most common Y-DNA lineage among Amazigh (Berber) populations. Previous estimates based on microsatellite data had placed the origin of E-M81 much earlier, but this high-resolution approach dramatically revised the timeline.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The researchers sequenced complete Y-chromosomes from men carrying E-M81 across North Africa and determined that the time to the most recent common ancestor (TMRCA) of this lineage is only approximately 2,000&ndash;3,000 years before present. This is far more recent than earlier estimates of 5,000&ndash;10,000 years.</p>
-            <p style="color: #475569; line-height: 1.8;">The phylogenetic tree revealed a striking star-like topology, indicating a rapid demographic expansion from a small founding population. This pattern is consistent with a population bottleneck followed by explosive growth, possibly linked to the adoption of camel pastoralism, trans-Saharan trade networks, or the consolidation of Amazigh confederations during the late first millennium BCE.</p>
+        <section class="card article-section">
+            <h3>Summary</h3>
+            <p>This study used whole Y-chromosome sequencing to reconstruct the phylogeny and dating of haplogroup E-M81 (also known as E-M183), the most common Y-DNA lineage among Amazigh (Berber) populations. Previous estimates based on microsatellite data had placed the origin of E-M81 much earlier, but this high-resolution approach dramatically revised the timeline.</p>
+            <p>The researchers sequenced complete Y-chromosomes from men carrying E-M81 across North Africa and determined that the time to the most recent common ancestor (TMRCA) of this lineage is only approximately 2,000&ndash;3,000 years before present. This is far more recent than earlier estimates of 5,000&ndash;10,000 years.</p>
+            <p>The phylogenetic tree revealed a striking star-like topology, indicating a rapid demographic expansion from a small founding population. This pattern is consistent with a population bottleneck followed by explosive growth, possibly linked to the adoption of camel pastoralism, trans-Saharan trade networks, or the consolidation of Amazigh confederations during the late first millennium BCE.</p>
         </section>
 
         <!-- Key Takeaways -->
-        <section class="card" style="margin-bottom: 2rem; border-left: 3px solid #8B4513; background: linear-gradient(to right, rgba(139, 69, 19, 0.04), transparent);">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Key Takeaways</h3>
-            <ul style="color: #475569; line-height: 1.8; padding-left: 1.5rem;">
-                <li style="margin-bottom: 0.75rem;">E-M81/E-M183 TMRCA dated to ~2,000&ndash;3,000 years before present via whole Y-chromosome sequencing</li>
-                <li style="margin-bottom: 0.75rem;">This is significantly more recent than prior microsatellite-based estimates of 5,000&ndash;10,000 years</li>
-                <li style="margin-bottom: 0.75rem;">Star-like phylogenetic topology indicates rapid demographic expansion from a small founding population</li>
-                <li style="margin-bottom: 0.75rem;">The expansion may correlate with historical events: camel adoption, trans-Saharan trade, or Amazigh confederation formation</li>
+        <section class="card article-section takeaways-sienna">
+            <h3>Key Takeaways</h3>
+            <ul class="takeaways-list">
+                <li>E-M81/E-M183 TMRCA dated to ~2,000&ndash;3,000 years before present via whole Y-chromosome sequencing</li>
+                <li>This is significantly more recent than prior microsatellite-based estimates of 5,000&ndash;10,000 years</li>
+                <li>Star-like phylogenetic topology indicates rapid demographic expansion from a small founding population</li>
+                <li>The expansion may correlate with historical events: camel adoption, trans-Saharan trade, or Amazigh confederation formation</li>
                 <li>Whole Y-chromosome sequencing provides higher resolution than STR-based methods for dating recent lineages</li>
             </ul>
         </section>
 
         <!-- Relevance to Our Lineage -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Relevance to Our Lineage</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This study is foundational to the paternal lineage analysis presented throughout this site. E-PF2546, the specific Y-DNA haplogroup carried by the Chtouka lineage, is a subclade within the E-M81/E-M183 branch. The dating of E-M81's expansion to ~2,000&ndash;3,000 years ago (~300 BCE to 1000 BCE) directly informs the timeline discussed on our <a href="../lineage.html" style="color: #8B4513;">Lineage History</a> page.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The star-like expansion pattern aligns with the historical narrative of Amazigh confederation formation in the Souss-Massa region. The rapid population growth from a small founding group is consistent with the establishment and expansion of tribal confederations like the Chtouka, where patrilineal descent structures would amplify specific Y-DNA lineages.</p>
-            <p style="color: #475569; line-height: 1.8;">The ~300 BCE date for E-PF2546 referenced on this site is derived from the branching structure established by this paper, placing the Chtouka lineage's diversification within the broader E-M81 expansion during a period of significant political and economic change across the Maghreb.</p>
+        <section class="card article-section">
+            <h3>Relevance to Our Lineage</h3>
+            <p>This study is foundational to the paternal lineage analysis presented throughout this site. E-PF2546, the specific Y-DNA haplogroup carried by the Chtouka lineage, is a subclade within the E-M81/E-M183 branch. The dating of E-M81's expansion to ~2,000&ndash;3,000 years ago (~300 BCE to 1000 BCE) directly informs the timeline discussed on our <a href="../lineage.html" class="text-sienna">Lineage History</a> page.</p>
+            <p>The star-like expansion pattern aligns with the historical narrative of Amazigh confederation formation in the Souss-Massa region. The rapid population growth from a small founding group is consistent with the establishment and expansion of tribal confederations like the Chtouka, where patrilineal descent structures would amplify specific Y-DNA lineages.</p>
+            <p>The ~300 BCE date for E-PF2546 referenced on this site is derived from the branching structure established by this paper, placing the Chtouka lineage's diversification within the broader E-M81 expansion during a period of significant political and economic change across the Maghreb.</p>
         </section>
 
         <section class="card">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Related Reading</h3>
+            <h3>Related Reading</h3>
             <div class="related-grid">
                 <a href="green-sahara-ancient-dna-2025.html" class="related-link-card">
                     <h4>Green Sahara Ancient DNA (2025)</h4>
@@ -175,11 +175,11 @@
         </section>
 
         <!-- Navigation -->
-        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem; margin-bottom: 2rem;">
-            <a href="../research.html" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #8B4513; font-weight: 600; text-decoration: none; font-size: 0.95rem;">&larr; Back to Research</a>
-            <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
-                <a href="../lineage.html" class="btn btn-outline" style="border-color: #CD7F32; color: #CD7F32; font-size: 0.85rem;">Lineage History</a>
-                <a href="../genetics.html" class="btn btn-outline" style="border-color: #CC8E35; color: #CC8E35; font-size: 0.85rem;">Genetics</a>
+        <div class="article-nav">
+            <a href="../research.html" class="article-back-link article-back-sienna">&larr; Back to Research</a>
+            <div class="article-nav-actions">
+                <a href="../lineage.html" class="btn btn-outline btn-outline-copper btn-small">Lineage History</a>
+                <a href="../genetics.html" class="btn btn-outline btn-outline-ochre btn-small">Genetics</a>
             </div>
         </div>
 
@@ -191,5 +191,7 @@
 
 </body>
 </html>
+
+
 
 
