--- a/research/green-sahara-ancient-dna-2025.html
+++ b/research/green-sahara-ancient-dna-2025.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
@@ -115,47 +115,47 @@
         </div>
 
         <!-- Paper Info Card -->
-        <section class="card" style="margin-bottom: 2rem; border-top: 3px solid #CD7F32;">
-            <div style="display: flex; align-items: flex-start; gap: 1rem; margin-bottom: 1rem; flex-wrap: wrap;">
-                <span style="font-size: 0.7rem; background: rgba(205, 127, 50, 0.12); color: #CD7F32; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Ancient DNA</span>
-                <span style="font-size: 0.7rem; background: rgba(139, 69, 19, 0.1); color: #8B4513; padding: 0.25rem 0.75rem; border-radius: 3px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em;">Nature</span>
-                <span style="font-size: 0.8rem; color: #8B7355; font-family: 'IBM Plex Mono', monospace; margin-left: auto;">January 2025</span>
+        <section class="card article-section paper-card-copper">
+            <div class="paper-meta-row">
+                <span class="paper-badge paper-badge-copper">Ancient DNA</span>
+                <span class="paper-badge paper-badge-journal">Nature</span>
+                <span class="paper-date">January 2025</span>
             </div>
-            <h2 style="font-size: 1.75rem; color: #3E2723; margin-bottom: 0.75rem; line-height: 1.3;">Ancient DNA from the Green Sahara Reveals Ancestral North African Lineage</h2>
-            <p style="font-size: 0.95rem; color: #666; margin-bottom: 1rem; font-family: 'IBM Plex Mono', monospace;">Salem, T. et al. (2025). <em>Nature</em>, 641, 144&ndash;150.</p>
-            <a href="https://doi.org/10.1038/s41586-025-08793-7" target="_blank" rel="noopener noreferrer" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CD7F32; font-weight: 600; font-size: 0.9rem; text-decoration: none; border: 1px solid #CD7F32; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.2s ease;">View Full Paper (DOI) &rarr;</a>
+            <h2 class="paper-title">Ancient DNA from the Green Sahara Reveals Ancestral North African Lineage</h2>
+            <p class="paper-citation">Salem, T. et al. (2025). <em>Nature</em>, 641, 144&ndash;150.</p>
+            <a href="https://doi.org/10.1038/s41586-025-08793-7" target="_blank" rel="noopener noreferrer" class="paper-doi-link paper-doi-copper">View Full Paper (DOI) &rarr;</a>
         </section>
 
         <!-- Summary -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Summary</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">This landmark study recovered ancient DNA from human remains in the Takarkori rock shelter in southwestern Libya, dating to approximately 7,000 years ago during the "Green Sahara" period (African Humid Period). The Sahara was then a lush, habitable landscape supporting pastoralist communities.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The researchers successfully sequenced the genome of these ancient Saharan inhabitants and discovered they carried a previously unknown basal lineage of mitochondrial haplogroup N. This lineage diverged early from other Eurasian branches and had not been detected in any modern or ancient population previously studied.</p>
-            <p style="color: #475569; line-height: 1.8;">The findings indicate that the Green Sahara harbored genetically distinct populations that contributed to the ancestry of later North African groups, but in complex ways that cannot be explained by simple models of north-south migration. The genetic isolation of these Saharan groups during the humid period suggests regional population structuring across North Africa during the Holocene.</p>
+        <section class="card article-section">
+            <h3>Summary</h3>
+            <p>This landmark study recovered ancient DNA from human remains in the Takarkori rock shelter in southwestern Libya, dating to approximately 7,000 years ago during the "Green Sahara" period (African Humid Period). The Sahara was then a lush, habitable landscape supporting pastoralist communities.</p>
+            <p>The researchers successfully sequenced the genome of these ancient Saharan inhabitants and discovered they carried a previously unknown basal lineage of mitochondrial haplogroup N. This lineage diverged early from other Eurasian branches and had not been detected in any modern or ancient population previously studied.</p>
+            <p>The findings indicate that the Green Sahara harbored genetically distinct populations that contributed to the ancestry of later North African groups, but in complex ways that cannot be explained by simple models of north-south migration. The genetic isolation of these Saharan groups during the humid period suggests regional population structuring across North Africa during the Holocene.</p>
         </section>
 
         <!-- Key Takeaways -->
-        <section class="card" style="margin-bottom: 2rem; border-left: 3px solid #CD7F32; background: linear-gradient(to right, rgba(205, 127, 50, 0.04), transparent);">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Key Takeaways</h3>
-            <ul style="color: #475569; line-height: 1.8; padding-left: 1.5rem;">
-                <li style="margin-bottom: 0.75rem;">First successful ancient DNA recovery from the Sahara, dating to ~7,000 years before present during the African Humid Period</li>
-                <li style="margin-bottom: 0.75rem;">Identified a novel basal branch of mitochondrial haplogroup N not found in any living population</li>
-                <li style="margin-bottom: 0.75rem;">Green Sahara populations were genetically distinct from both sub-Saharan African and Mediterranean groups of the same era</li>
-                <li style="margin-bottom: 0.75rem;">Population dynamics during the Green Sahara were more complex than previously modeled, with significant regional structuring</li>
+        <section class="card article-section takeaways-copper">
+            <h3>Key Takeaways</h3>
+            <ul class="takeaways-list">
+                <li>First successful ancient DNA recovery from the Sahara, dating to ~7,000 years before present during the African Humid Period</li>
+                <li>Identified a novel basal branch of mitochondrial haplogroup N not found in any living population</li>
+                <li>Green Sahara populations were genetically distinct from both sub-Saharan African and Mediterranean groups of the same era</li>
+                <li>Population dynamics during the Green Sahara were more complex than previously modeled, with significant regional structuring</li>
                 <li>The aridification of the Sahara (~5,500 years ago) likely displaced these populations, contributing to the genetic makeup of later North African groups</li>
             </ul>
         </section>
 
         <!-- Relevance to Our Lineage -->
-        <section class="card" style="margin-bottom: 2rem;">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Relevance to Our Lineage</h3>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">While this study focuses on populations from a different time and place than the Chtouka lineage, it provides critical context for understanding the deep ancestry of all North African groups, including the Amazigh (Berber) populations of the Souss-Massa.</p>
-            <p style="color: #475569; line-height: 1.8; margin-bottom: 1rem;">The discovery of a basal haplogroup N lineage in the Sahara demonstrates that North Africa's genetic landscape was shaped by multiple distinct population layers over millennia. This complexity supports the dual-origin model discussed on our <a href="../lineage.html" style="color: #CD7F32;">Lineage History</a> page, where indigenous North African paternal lineages (E-PF2546) coexist with maternal lineages (H1-T16189C!) that arrived via different migration routes.</p>
-            <p style="color: #475569; line-height: 1.8;">The Green Sahara period represents one of several major demographic events that shaped the genetic diversity observed in modern Amazigh populations, preceding the later expansions that gave rise to the E-M81/E-PF2546 lineage.</p>
+        <section class="card article-section">
+            <h3>Relevance to Our Lineage</h3>
+            <p>While this study focuses on populations from a different time and place than the Chtouka lineage, it provides critical context for understanding the deep ancestry of all North African groups, including the Amazigh (Berber) populations of the Souss-Massa.</p>
+            <p>The discovery of a basal haplogroup N lineage in the Sahara demonstrates that North Africa's genetic landscape was shaped by multiple distinct population layers over millennia. This complexity supports the dual-origin model discussed on our <a href="../lineage.html" class="text-copper">Lineage History</a> page, where indigenous North African paternal lineages (E-PF2546) coexist with maternal lineages (H1-T16189C!) that arrived via different migration routes.</p>
+            <p>The Green Sahara period represents one of several major demographic events that shaped the genetic diversity observed in modern Amazigh populations, preceding the later expansions that gave rise to the E-M81/E-PF2546 lineage.</p>
         </section>
 
         <section class="card">
-            <h3 style="color: #3E2723; margin-bottom: 1rem; font-size: 1.25rem;">Related Reading</h3>
+            <h3>Related Reading</h3>
             <div class="related-grid">
                 <a href="north-african-mitogenomes-2025.html" class="related-link-card">
                     <h4>North African Mitogenomes (2025)</h4>
@@ -175,11 +175,11 @@
         </section>
 
         <!-- Navigation -->
-        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem; margin-bottom: 2rem;">
-            <a href="../research.html" style="display: inline-flex; align-items: center; gap: 0.5rem; color: #CD7F32; font-weight: 600; text-decoration: none; font-size: 0.95rem;">&larr; Back to Research</a>
-            <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
-                <a href="../lineage.html" class="btn btn-outline" style="border-color: #CD7F32; color: #CD7F32; font-size: 0.85rem;">Lineage History</a>
-                <a href="../genetics.html" class="btn btn-outline" style="border-color: #CC8E35; color: #CC8E35; font-size: 0.85rem;">Genetics</a>
+        <div class="article-nav">
+            <a href="../research.html" class="article-back-link article-back-copper">&larr; Back to Research</a>
+            <div class="article-nav-actions">
+                <a href="../lineage.html" class="btn btn-outline btn-outline-copper btn-small">Lineage History</a>
+                <a href="../genetics.html" class="btn btn-outline btn-outline-ochre btn-small">Genetics</a>
             </div>
         </div>
 
@@ -191,5 +191,6 @@
 
 </body>
 </html>
+
 
 
