Add homepage map feature with regional context and styling

--- a/index.html
+++ b/index.html
@@ -239,6 +239,20 @@
                 The <strong>Souss-Massa</strong> is a fertile region in southwestern Morocco, nestled between the High Atlas Mountains and the Atlantic Ocean. This ancient valley has been the heartland of Amazigh civilization for millennia, serving as a crossroads of cultures and a center of indigenous resistance and autonomy.
             </p>
 
+            <section class="home-map-feature" aria-labelledby="maghreb-map-title">
+                <div class="home-map-grid">
+                    <div>
+                        <span class="home-map-kicker">Regional Context</span>
+                        <h3 id="maghreb-map-title" class="home-map-title">Maghreb Geographic Frame</h3>
+                        <p class="home-map-copy">This unlabeled map places the Souss-Massa homeland within its wider North African setting. It helps orient the regional scope of lineage movements discussed across this site, from Atlantic Morocco to neighboring Maghreb zones.</p>
+                    </div>
+                    <figure class="home-map-figure">
+                        <img src="img/map-maghreb.png" alt="Unlabeled map of the Maghreb region used as geographic context for Amazigh lineage analysis" class="home-map-image" loading="lazy">
+                        <figcaption class="home-map-caption">Unlabeled Maghreb map for geographic orientation and migration context.</figcaption>
+                    </figure>
+                </div>
+            </section>
+
             <div class="grid" style="gap: 2rem; align-items: start;">
                 <div>
                     <h3>🏔️ Geography & Climate</h3>
